source/css/component.css
/* General styles for all menus */
.cbp-spmenu {
	background: #000;
	opacity: 0.8;
	position: fixed;
}

.cbp-spmenu h3 {
	color: #eee;
	font-size: 1.3em;
	padding: 1.1rem 0.7rem 0.4rem 0.7rem;
	margin: 0;
}

.cbp-spmenu h4 {
	color: #eee;
	font-size: 0.9em;
	padding: 0.7rem 0.7rem 0 0.7rem;
	margin: 0;
}

.cbp-spmenu a {
	display: block;
	color: #fff;
	font-size: 1.1em;
	font-weight: 300;
}

.cbp-spmenu a:hover {
	background: #333;
}

.cbp-spmenu a:active {
	background: #afdefa;
	color: #47a3da;
}

.cbp-spmenu input, .cbp-spmenu select, .cbp-spmenu textarea {
	padding: 0.4rem;
	margin: 0.3rem 0.7rem;
	width: 90%;
}

.cbp-spmenu .search-results ul {
	margin: 0;
	padding: 0.3rem 0.7rem;
}

.cbp-spmenu .search-results .search-noresult {
	font-style: italic;
	padding: 0.3rem 0.7rem;
}

.cbp-spmenu .search-results ul li {
	font-size: 0.8rem;
	list-style: none inside;
}

.cbp-spmenu .search-results ul li a {
	padding: 0.3rem;
}


/* Orientation-dependent styles for the content of the menu */

.cbp-spmenu-vertical {
	width: 240px;
	height: 100%;
	top: 0;
	z-index: 1000;
}

.cbp-spmenu-vertical a {
	border-bottom: 2px solid #666;
	padding: 0.7rem;
}

.cbp-spmenu-horizontal {
	width: 100%;
	height: 150px;
	left: 0;
	z-index: 1000;
	overflow: hidden;
}

.cbp-spmenu-horizontal h3 {
	height: 100%;
	width: 20%;
	float: left;
}

.cbp-spmenu-horizontal a {
	float: left;
	width: 20%;
	padding: 0.8em;
	border-left: 1px solid #258ecd;
}

/* Vertical menu that slides from the left or right */

.cbp-spmenu-left {
	left: -240px;
}

.cbp-spmenu-right {
	right: -240px;
}

.cbp-spmenu-left.cbp-spmenu-open {
	left: 0px;
}

.cbp-spmenu-right.cbp-spmenu-open {
	right: 0px;
}

/* Horizontal menu that slides from the top or bottom */

.cbp-spmenu-top {
	top: -150px;
}

.cbp-spmenu-bottom {
	bottom: -150px;
}

.cbp-spmenu-top.cbp-spmenu-open {
	top: 0px;
}

.cbp-spmenu-bottom.cbp-spmenu-open {
	bottom: 0px;
}

/* Push classes applied to the body */

.cbp-spmenu-push {
	overflow-x: hidden;
	position: relative;
	left: 0;
}

.cbp-spmenu-push-toright {
	left: 240px;
}

.cbp-spmenu-push-toleft {
	left: -240px;
}

/* Transitions */

.cbp-spmenu,
.cbp-spmenu-push {
	-webkit-transition: all 0.3s ease;
	-moz-transition: all 0.3s ease;
	transition: all 0.3s ease;
}

